bugfix: Fix StringIndexOutOfBoundsException in ImportOrganizerFormattingRule
Fixes bounds check when determining import section end position. Also sorts
imports by source position instead of type for cleaner bounds calculation.

Changes:
- Add bounds check before accessing source.charAt(sectionEnd)
- Sort imports by position in ImportExtractor.extract()
- Simplify bounds calculation using getFirst()/getLast()